--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "type": "module",
   "dependencies": {
-    "mdsvex": "^0.10.5"
+    "mdsvex": "^0.10.5",
+    "node-sass": "^7.0.1"
   }
 }
